# wolf-instruments-refined17

./: .gitignore  Build_New_VST.command  CMakeLists.txt  Claude_Repo_Merge_Plan.md  beats.html  build_installer.sh  build_installer_mac.sh  build_installer_win.ps1  build_log.txt  claude_test_plan.md  drumkits.html  index.html  melodies.html  rebuild_all.sh  styles.css  vst.html
.claude/: launch.json
.github/workflows/: build.yml
Source/: CustomKnobLookAndFeel.cpp  CustomKnobLookAndFeel.h  DrumTab.cpp  DrumTab.h  EffectsProcessor.cpp  EffectsProcessor.h  EffectsTab.cpp  EffectsTab.h  FilterProcessor.cpp  FilterProcessor.h  GlassPanel.h  HuntEngine.cpp  HuntEngine.h  LEDToggleButton.cpp  LEDToggleButton.h  LFOProcessor.cpp  LFOProcessor.h  LicenseActivationOverlay.cpp  LicenseActivationOverlay.h  LicenseManager.cpp  LicenseManager.h  MidiCapturer.cpp  MidiCapturer.h  MidiDragComponent.cpp  MidiDragComponent.h  MidiProcessor.cpp  MidiProcessor.h  MidiTab.cpp  MidiTab.h  ModernCyberLookAndFeel.cpp  ModernCyberLookAndFeel.h  ModulateTab.cpp  ModulateTab.h  ObsidianLookAndFeel.h  PerformTab.cpp  PerformTab.h  PianoRollComponent.cpp  PianoRollComponent.h  PlayTab.cpp  PlayTab.h  (+22 more)
build_v16/: CMakeCache.txt  cmake_install.cmake
build_v16/CMakeScripts/: ReRunCMake.make
build_v16/HowlingWolves_artefacts/Release/AU/Howling Wolves.component/Contents/: Info.plist
build_v16/HowlingWolves_artefacts/Release/Standalone/Howling Wolves.app/Contents/: Info.plist
build_v16/HowlingWolves_artefacts/Release/Standalone/Howling Wolves.app/Contents/Resources/: Icon.icns
build_v16/HowlingWolves_artefacts/Release/VST3/Howling Wolves.vst3/Contents/: Info.plist
build_v16/HowlingWolves_artefacts/Release/VST3/Howling Wolves.vst3/Contents/Resources/: moduleinfo.json
build_v16/HowlingWolves_artefacts/Release/VST3/Howling Wolves.vst3/Contents/_CodeSignature/: CodeResources
build_v16/Release/: juce_vst3_helper
build_v18/: CMakeCache.txt  cmake_install.cmake
build_v18/CMakeScripts/: ReRunCMake.make
build_v18/HowlingWolves_artefacts/Release/AU/Howling Wolves.component/Contents/: Info.plist
build_v18/HowlingWolves_artefacts/Release/AU/Howling Wolves.component/Contents/_CodeSignature/: CodeResources
build_v18/HowlingWolves_artefacts/Release/Standalone/Howling Wolves.app/Contents/: Info.plist
build_v18/HowlingWolves_artefacts/Release/Standalone/Howling Wolves.app/Contents/_CodeSignature/: CodeResources
build_v18/HowlingWolves_artefacts/Release/VST3/Howling Wolves.vst3/Contents/: Info.plist
build_v18/HowlingWolves_artefacts/Release/VST3/Howling Wolves.vst3/Contents/Resources/: moduleinfo.json
build_v18/HowlingWolves_artefacts/Release/VST3/Howling Wolves.vst3/Contents/_CodeSignature/: CodeResources
build_v18/Release/: juce_vst3_helper
build_v19_test/: CMakeCache.txt
docs/: CLAUDE.md  CNAME  audio-player.js  beats.html  bundles.html  drumkits.html  expansions.html  free-download.html  free-sounds.html  index.html  melodies.html  refund-policy.html  serve.js  styles.css  success.html  terms-of-service.html  vst.html
docs/beats/: index.html
docs/docs/: index.html  styles.css
docs/docs/beats/: index.html
docs/docs/drumkits/: index.html
docs/docs/expansions/: index.html
docs/docs/melodies/: index.html
docs/docs/success/: index.html
docs/docs/vst/: index.html
docs/drumkits/: index.html
docs/expansions/: index.html
docs/melodies/: index.html
docs/refund-policy/: index.html
docs/success/: index.html
docs/terms-of-service/: index.html
docs/vst/: index.html
